fix: remove scrollbar

--- a/assets/sass/app.scss
+++ b/assets/sass/app.scss
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
 // apply fonts
-$fontFamily: "Inter", sans-serif;
+$fontFamily: 'Inter', sans-serif;
 
 body,
 * {
@@ -9,7 +9,8 @@ body,
 
 // scrollbar
 ::-webkit-scrollbar {
-  width: 16px;
+  display: none;
+  width: 8px;
 }
 ::-webkit-scrollbar-track {
   background: theme('colors.gray.100');
